# kibbot

./: .gitignore  README.md
Autobot/: CMakeLists.txt  _main.cpp  _main_kinect.cpp  ctrl_session.cpp  img_session.cpp  server.cpp  session.cpp  utility.cpp
Autobot/include/: Actuator.h  Arbitrator.h  Behavior.h  ImageProcessor.h  KinectConnector.h  Receiver.h  RecieverThread.h  Viewer.h  config.h  ctrl_session.h  img_session.h  interrupts.h  server.h  session.h  utility.h
Controller/: controller.py
